--- a/gradient_descent.ipynb
+++ b/gradient_descent.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "gradient descent.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPq8cKepw41U/cUSSiO3fN1",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/nadavru/iLearn/blob/main/gradient_descent.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
